# XHotkey

./: .gitignore  XHotkey.cabal
src/: XHotkey.hs
src/X11/: XHotkey.hs
src/X11/XHotkey/: Core.hs  Types.hs
src/XHotkey/: Core.hs  Internal.hs  Types.hs  Types.hsc  Window.hs
src/XHotkey/Window/: .Internal.hs.swo  .Internal.hs.un~  Internal.hi  Internal.hs  Internal.hs~
